fixing our story overlay styling for mobile and non mobile

--- a/src/components/Story/story.css
+++ b/src/components/Story/story.css
@@ -1,15 +1,20 @@
 .story-container {
+  position: relative;
   display: flex;
   flex: 1;
   margin-top: 10px;
 }
 
-@media(max-width: 767px) {
+@media(max-width: 430px) {
   .story-container {
     flex-wrap: wrap;
   }
+  .story-image-container {
+    flex: 1 1 50%;
+    display: flex;
+  }
   .story-image {
-    height: 70%;
+    height: 100%;
     width: 100%;
     z-index: 2;
     opacity: 0.9;
@@ -19,8 +24,8 @@
     right: 0px;
     opacity: 0.5;
     background: grey;
-    height: calc(100% - 10px);
-    width: 100vw;
+    height: 100%;
+    width: 100%;
   }
   .story-text {
     color: #e2e4e9;
@@ -30,12 +35,13 @@
   }
 }
 
-@media(min-width: 768px) {
+@media(min-width: 431px) {
   .story-image-container {
-    max-width: 50%;
+    flex: 1;
+    display: flex;
   }
   .story-image {
-    height: auto;
+    height: 100%;
     width: 100%;
     z-index: 2;
     opacity: 0.9;
@@ -45,13 +51,14 @@
     right: 0px;
     opacity: 0.5;
     background: grey;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
   }
   .story-text {
     color: #e2e4e9;
     padding: 2rem;
     z-index: 2;
     max-width: 50%;
+    flex: 1;
   }
 }
